--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="about-me__info--para">                        
                         I am a recent Computer Science and Game Design graduate who is a <strong class="text--purple">strong</strong> C++ architecture & tools programmer.
                         I have a love for making my fellow teammates' lives easier through code by identifying bottlenecks in their workflows.
-                        I do enjoy the process of solving problems and I find tools programming is filled with a ton.
+                        I enjoy the process of solving problems and I find tools programming is filled with a ton.
                         From coming up with an abstract solution to figuring out how you are going to architect that very solution.
 
                     </p>
@@ -156,6 +156,52 @@
                     <h2 class="section__title2">Here are some of my latest works</h2>
                     <div class="project__divider"> </div>
                     <ul class="project__list">
+
+                        <li class="project">
+                            <a href="./Projects.html" target="_blank" class="project__description--link">
+                                <div class="project__wrapper">
+                                    <img src="./assets/poseidon.png" alt="project Atlantis" class="project__img" />
+                                    <div class="project__description">
+                                        <div class="project__divider--thick"> </div>
+                                        <h3 class="project__description--title">3D Plaformer</h3>
+                                        <h3 class="project__description--sub-title">Unreal Engine 4, Blueprints, VFX</h3>
+                                        <p class="project__description--para">
+                                            Project Atlantis
+                                        </p>
+
+                                        <div class="project__description--links">
+                                            <!-- <a href="https://github.com/gittyhubster" target="_blank" class="project__description--link">
+                                                <i class="fa-brands fa-github" style="color: #fff"></i>
+                                            </a> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li class="project">
+                            <a href="./Hamtsy.html" target="_blank" class="project__description--link">
+                                <div class="project__wrapper">
+                                    <img src="./assets/splashArt.jpg" alt="Unity 3D WhiteBox" class="project__img" />
+                                    <div class="project__description">
+                                        <div class="project__divider--thick"> </div>
+                                        <h3 class="project__description--title">2D Plaformer</h3>
+                                        <h3 class="project__description--sub-title">Custom Built Engine, C++, Tiled</h3>
+                                        <p class="project__description--para">
+                                            Hamster Havoc was a team based project I worked on sophmore year with 11 other individuals.
+                                            My main role was engineering Tools and physics programming.
+                                        </p>
+
+                                        <div class="project__description--links">
+                                            <a href="./assets/Hamster Havoc_Setup.exe" target="_blank" class="project__description--link">
+                                                <i class="fa-solid fa-download" style="color: #fff"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
                         <li class="project">
                             <a href="./Projects.html" target="_blank" class="project__description--link">
                                 <div class="project__wrapper">
@@ -163,61 +209,16 @@
                                     <div class="project__description">
                                         <div class="project__divider--thick"> </div>
                                         <h3 class="project__description--title">3D Plaformer</h3>
-                                        <h3 class="project__description--sub-title">Unity, C#, Probuilder</h3>
+                                        <h3 class="project__description--sub-title">Unity, C#, ProBuilder</h3>
                                         <p class="project__description--para">
-                                            This project intially started off as 3D level design project, Lorem ipsum dolor sit amet,
-                                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                            This solo project intially started off as a small white box of a sketched level, but
+                                            evolved into a prototype for a 3D platformer with the addition of depth & character
+                                            to the environment through obstacles.
                                         </p>
 
                                         <div class="project__description--links">
-                                            <a href="https://github.com/gittyhubster" target="_blank" class="project__description--link">
-                                                <i class="fa-brands fa-github" style="color: #fff"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li class="project">
-                            <a href="./Projects.html" target="_blank" class="project__description--link">
-                                <div class="project__wrapper">
-                                    <img src="./assets/FreshmanGamePic.png" alt="Unity 3D WhiteBox" class="project__img" />
-                                    <div class="project__description">
-                                        <div class="project__divider--thick"> </div>
-                                        <h3 class="project__description--title">3D Plaformer</h3>
-                                        <h3 class="project__description--sub-title">Unity, C#, Probuilder</h3>
-                                        <p class="project__description--para">
-                                            This project intially started off as 3D level design project, Lorem ipsum dolor sit amet,
-                                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                        </p>
-
-                                        <div class="project__description--links">
-                                            <a href="https://github.com/gittyhubster" target="_blank" class="project__description--link">
-                                                <i class="fa-brands fa-github" style="color: #fff"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li class="project">
-                            <a href="./Projects.html" target="_blank" class="project__description--link">
-                                <div class="project__wrapper">
-                                    <img src="./assets/HamsterHavocPic.png" alt="Unity 3D WhiteBox" class="project__img" />
-                                    <div class="project__description">
-                                        <div class="project__divider--thick"> </div>
-                                        <h3 class="project__description--title">3D Plaformer</h3>
-                                        <h3 class="project__description--sub-title">Unity, C#, Probuilder</h3>
-                                        <p class="project__description--para">
-                                            This project intially started off as 3D level design project, Lorem ipsum dolor sit amet,
-                                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                        </p>
-
-                                        <div class="project__description--links">
-                                            <a href="https://github.com/gittyhubster" target="_blank" class="project__description--link">
-                                                <i class="fa-brands fa-github" style="color: #fff"></i>
+                                            <a href="./assets/3DPlatformerBuild.zip" target="_blank" class="project__description--link">
+                                                <i class="fa-solid fa-download" style="color: #fff"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -241,11 +242,11 @@
                 </a>
 
                 <div class="socials--list">
-                    <a href="https://google.com" class="footer__social--link
+                    <a href="https://github.com/gittyhubster" class="footer__social--link
                        link__hover-effect
                        link__hover-effect--white" target="_blank">GitHub</a>
 
-                    <a href="https://google.com" class="footer__social--link
+                    <a href="https://www.linkedin.com/in/ddjj/" class="footer__social--link
                        link__hover-effect
                        link__hover-effect--white" target="_blank">LinkedIn</a>
 
