--- a/Projects.html
+++ b/Projects.html
@@ -30,6 +30,16 @@
             </p>
             </div>
 
+            <div class="RapidFire-Bullet--list">
+                <h3>Technical highlights </h3>
+                <ul>
+                    <li>AI Patrol Pathing</li>
+                    <li>Hint System</li>
+                    <li>Waypoint & Respawn functionality</li>
+                    <li>In-game Cinematic-like Camera Pan</li>
+                </ul>
+            </div>
+
             <div class="carousel-descriptors">
 
                 <div class="carousel-item-para carousel-item-para-1"><p>The view of the castle before entering.</p></div>
@@ -95,7 +105,7 @@
             spatial archetypes in them.
         </p>
 
-        <div class="highlight-title"><p>Figure 1 - Inital sketch of the level.</p></div>
+        <div class="highlight-title"><p>Figure 1: Inital sketch of the level.</p></div>
         <div class="project-figure-container">
             <img class="body-images" src="./assets/DJ_PaperLevel1024_1.PNG" alt="Alternate Text"/>
         </div>
@@ -147,7 +157,7 @@
             </p></div>
 
         <div class="code-container">
-            <pre><code class="lang-cpp match-braces rainbow-braces">
+            <pre><code class="lang-cpp match-braces rainbow-braces line-numbers">
 private void CameraPan()
 {
     // the light is my target
@@ -176,7 +186,7 @@ private void CameraPan()
             along the main path so players would know if there on the right track.
         </p>
 
-        <div class="highlight-title"><p>Figure 2,3 - Examples of Lighting used </p></div>
+        <div class="highlight-title"><p>Figure 2-3: Examples of Lighting used </p></div>
         <div class="project-figure-container">
             <img class="body-images" src="./assets/Screenshot (8).png" alt="Alternate Text" />
 
