--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                         <div class="language">
                             <figure class="language__img--wrapper">
-                                <img src="./assets/rapidjson.png" alt="" class="language__img" />
+                                <img src="./assets/Git-Logo-2Color.svg" alt="" class="language__img" />
                             </figure>
                             <span class="language__name"></span>
                         </div>
@@ -149,6 +149,27 @@
                                 <img src="./assets/logo-mysql-170x115.png" alt="" class="language__img" width="88" height="60" />
                             </figure>
                             <span class="language__name">MySQL</span>
+                        </div>
+
+                        <div class="language">
+                            <figure class="language__img--wrapper">
+                                <img src="./assets/icons8-unity.svg" alt="" class="language__img" />
+                            </figure>
+                            <span class="language__name">Unity</span>
+                        </div>
+
+                        <div class="language">
+                            <figure class="language__img--wrapper">
+                                <img src="./assets/icons8-unreal-engine-100.svg" alt="" class="language__img" />
+                            </figure>
+                            <span class="language__name">Unreal Engine</span>
+                        </div>
+
+                        <div class="language">
+                            <figure class="language__img--wrapper">
+                                <img src="./assets/icons8-visual-studio.svg" alt="" class="language__img" />
+                            </figure>
+                            <span class="language__name">Visual Studio</span>
                         </div>
                     </div>
                 </div>
@@ -252,15 +273,17 @@
                             <div class="education-headings">
                                 <h2>DigiPen Institute of Technology</h2>
                                 <h5 class="Education--contents">Bachelor of Science in Computer Science & Game Design</h5>
-                                <div class="grad-date">Graduated Spring 2023</div>
+                                <div><strong class="grad-date">Graduated Spring 2023</strong></div>
                         </div>
                         
                         <div class="education-body">
                             <div class="education-specfics">Double Major: Computer Science & Game Design</div>
-                            <p>Relevant Courses: Computer Graphics | Algorithms | Data Structures | Network Programming
+
+                            <p>Relevant Courses: Computer Graphics | Algorithms | Data Structures | Network Programming | C/C++
                                 | Discrete Mathematics | Calculus I | Calculus II | Linear Algebra | Object-Oriented Programming
-                                | Technical Game Design | System Design | Level Design | UI Design
+                                | Technical Game Design | System Design | Level Design | UI Design | Number Theory and Cryptography
                             </p>
+
                         </div>
 
                         </div>
@@ -271,7 +294,7 @@
                             <div class="education-headings">
                                 <h2>Turks and Caicos Community College</h2>
                                 <h5 class="Education--contents">Associate Degree in Computer Science Studies</h5>
-                                <div class="grad-date">Graduated Spring 2019</div>
+                                <div class="grad-date"><strong class="grad-date">Graduated Spring 2019</strong></div>
                         </div>
                         
                         <div class="education-body">
