Fixed some inconsistencies

--- a/Hamtsy.html
+++ b/Hamtsy.html
@@ -95,7 +95,7 @@
                 the entire level in the engine.
             </p>
 
-            <div><p class="highlight-title">
+            <div><p>
                 <strong>Figure 1-3: </strong> Level in editor on left, the same level fully serialized 
                 in the game itself and the tileset used to make the level in the editor.
             </p></div>
