--- a/Poseidon.html
+++ b/Poseidon.html
@@ -133,7 +133,7 @@
         If you would like more info on the implementation of this system you can download my write-up below.
         </p>
 
-        <a href="./assets/Deante_James_LandscapeDeformationArchitecture.pdf" class="footer__anchor1">
+        <a href="./assets/Deante_James_LandscapeDeformationArchitecture.pdf" class="footer__anchor1" target="_blank">
             <figure class="footer__logo">
                 <i class="fa-solid fa-file-pdf" class="footer__logo--img" style="color: #471cb3; font-size: 1.5em"></i>
             </figure>
@@ -142,12 +142,12 @@
             </span>
             </a>
 
-        <div class="highlight-title"><p>Video 1 - Underwater Rock Explosion</p></div>
+        <div class="highlight-title"><p>Video 1: Underwater Rock Explosion</p></div>
         <div class="project-figure-container">
             <img class="body-images" src="./assets/DestructFinal.gif" alt="Picture of landscape paint tool" />
         </div>
 
-        <div class="highlight-title"><p>Figure 3 - Deformity Made by diver</p></div>
+        <div class="highlight-title"><p>Figure 3: Deformity Made by diver</p></div>
         <div class="project-figure-container">
             <img class="body-images" src="./assets/Screenshot (29).png" alt="Picture of landscape paint tool" />
         </div>
