--- a/Projects.html
+++ b/Projects.html
@@ -105,7 +105,7 @@
             spatial archetypes in them.
         </p>
 
-        <div class="highlight-title"><p>Figure 1: Inital sketch of the level.</p></div>
+        <div><p>Figure 1: Inital sketch of the level.</p></div>
         <div class="project-figure-container">
             <img class="body-images" src="./assets/DJ_PaperLevel1024_1.PNG" alt="Alternate Text"/>
         </div>
@@ -143,7 +143,7 @@
             looking. This is similar to the The Last of Us hint system. I also used these cutscene areas as checkpoints.
         </p>
 
-        <div class="highlight-title"><p>Video 1 - Sentry AI Demo</p></div>
+        <div><p>Video 1: Sentry AI Demo</p></div>
         <div class="video-container">
 
             <iframe src="https://www.youtube.com/embed/8IISOm_lRQA" type="video/mp4" class="project-video"
@@ -151,8 +151,8 @@
 
         </div>
 
-        <div class="highlight-title"><p>
-            <strong>Code Snippet 1: </strong>
+        <div><p>
+            Code Snippet 1:
             Below is the crux of my hint system a cinematic-like camera pan
             </p></div>
 
@@ -186,7 +186,7 @@ private void CameraPan()
             along the main path so players would know if there on the right track.
         </p>
 
-        <div class="highlight-title"><p>Figure 2-3: Examples of Lighting used </p></div>
+        <div><p>Figure 2-3: Examples of Lighting used </p></div>
         <div class="project-figure-container">
             <img class="body-images" src="./assets/Screenshot (8).png" alt="Alternate Text" />
 
