--- a/index.html
+++ b/index.html
@@ -49,17 +49,15 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/MeSitting.jpg" class="about-me__pic" "alt=" A Picture of me" />
+                        <img src="./assets/MeSitting.jpg" class="about-me__pic" alt=" A Picture of me" />
                     </figure>
                     <h1 class="about-me__info--title">
                         I'm <span class="text--purple">Deante James</span>
                     </h1>
                     <p class="about-me__info--para">                        
-                        I am a recent Computer Science and Game Design graduate who is a <strong class="text--purple">strong</strong> C++ architecture & tools programmer.
-                        I have a love for making my fellow teammates' lives easier through code by identifying bottlenecks in their workflows.
-                        I enjoy the process of solving problems and I find tools programming is filled with a ton.
-                        From coming up with an abstract solution to figuring out how you are going to architect that very solution.
-
+                        As a Computer Science and Game Design graduate, I have <strong class="text--purple">strong</strong> skills in C++ architecture and tools programming.
+                        I am passionate about creating code that enhances the productivity and efficiency of my colleagues.
+                        I thrive on solving complex problems with innovative solutions, which is why I enjoy tools programming.
                     </p>
                     <div class="about-me__links">
                         <a href="https://www.linkedin.com/in/ddjj/" class="about-me__link" target="_blank">
@@ -339,7 +337,7 @@
                        link__hover-effect--white" target="_blank">Resume</a>
                 </div>
                 
-                <div class = "footer__copyright">Copyright © 2023 Deante James</div>
+                <div class = "footer__copyright">Copyright © 2024 Deante James</div>
             </div>
         </footer>
     </body>
