--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 </a>
 
                 <div class="socials--list">
-                    <a href="https://github.com/gittyhubster" class="footer__social--link
+                    <a href="https://github.com/ddjjames" class="footer__social--link
                        link__hover-effect
                        link__hover-effect--white" target="_blank">GitHub</a>
 
